2002-12-08  Dave Peticolas  <dave@krondo.com>

	* twisted/enterprise/util.py: make sure quoted values are strings
	(fixes bug storing boolean types)

2002-12-06  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_internet.py: flush error to prevent failure
	with non-destructive DeferredLists.

	* twisted/test/test_ftp.py: flush FTPErrors to prevent failures
	with non-destructive DeferredLists.

	* twisted/test/test_defer.py: catch the errors to prevent failure
	with non-destructive DeferredLists

	* twisted/enterprise/util.py: add some postgres types. boolean
	types need to be quoted. remove unused selectSQL variable.

2002-12-05  Dave Peticolas  <dave@krondo.com>

	* twisted/enterprise/sqlreflector.py: fix some sql escaping
	bugs. allow subclasses to override escaping semantics.

	* twisted/enterprise/util.py: allow quote function's string escape
	routine to be overridden with a keyword argument.

2002-12-5  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/python/plugin.py: fixed a bug that got the wrong plugins.tml
	if the package was installed in two different places
 
	* twisted/inetd/*, twisted/runner/*: moved inetd to runner, to live in
	harmony with procmon

2002-12-04  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_policies.py: Take the start time timestamp
	immediately before creating the ThrottlingFactory, since the
	factory starts timing when it is created.

	* admin/runtests: Add a 'gtk2' test type to use the gtk2reactor
	for the test suite.

2002-12-2  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/web/client.py: web client

2002-11-30  Paul Swartz  <z3p@twistedmatrix.com>

	* Summary of Conch changes:  An actual client (bin/conch) which is
	mostly compatible with the OpenSSH client.  An optional C module to
	speed up some of the math operations.  A bunch of other stuff has
	changed too, but it's hard to summarize a month of work.

2002-11-24  Donovan Preston  <dp@twistedmatrix.com>
